--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 
 <body>
     <div id="container">
+        <nav id="navbar">
+            <header>JS Documentation</header>
+            <a href="#introduction">Introduction</a>
+            <a href="#what_you_should_already_know">What you should already know</a>
+            <a href="#java_script_and_java">JavaScript and Java</a>
+            <a href="#hello_world">Hello world</a>
+            <a href="#variables">Variables</a>
+            <a href="#declaring_variables">Declaring variables</a>
+            <a href="#variable_scope">Variable scope</a>
+            <a href="#global_variables">Global variables</a>
+            <a href="#constants">Constants</a>
+            <a href="#data_types">Data types</a>
+            <a href="#if_else_statement">if...else statement</a>
+            <a href="#while_statement">while statement</a>
+            <a href="#function_declarations">Function declarations</a>
+            <a href="#reference">Reference</a>
+        </nav>
         <main id="main-doc">
             <section class="main-section" id="introduction">
                 <header>Introduction</header>
