--- a/index.html
+++ b/index.html
@@ -112,13 +112,7 @@
                     To get started with writing JavaScript, open the Scratchpad and write your first "Hello world"
                     JavaScript code:
                 </p>
-
-                <pre><code>
-function greetMe(yourName) {
-  alert("Hello " + yourName);
-}
-greetMe("World");
-                </code></pre>
+                <code>function greetMe(yourName) {<br>  alert("Hello " + yourName);<br>}<br>greetMe("World");</code>
                 <p>
                     Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!
                 </p>
@@ -150,18 +144,14 @@ greetMe("World");
                 <p>
                     With the keyword var. For example,
                 </p>
-                <pre><code>
-var x = 42.
-                </code></pre>
+                <code>var x = 42.</code>
                 <p>
                     This syntax can be used to declare both local and global variables.
                 </p>
                 <p>
                     By simply assigning it a value. For example,
                 </p>
-                <pre><code>
-x = 42.
-                </code></pre>
+                <code>x = 42.</code>
                 <p>
                     This always declares a global variable. It generates a strict JavaScript warning. You shouldn't use
                     this variant.
@@ -169,12 +159,7 @@ x = 42.
                 <p>
                     With the keyword let. For example,
                 </p>
-                <pre><code>
-let y = 13.
-                </code></pre>
-                <pre>
-                    <code></code>
-                </pre>
+                <code>let y = 13.</code>
                 <p>
                     This syntax can be used to declare a block scope local variable. See Variable scope below.
                 </p>
@@ -195,22 +180,11 @@ let y = 13.
                     which
                     x is declared, not the block, which in this case is an if statement.
                 </p>
-                <pre><code>
-if (true) {
-  var x = 5;
-}
-console.log(x);  // 5
-                </code></pre>
+                <code>if (true) {<br>  var x = 5;<br>}<br>console.log(x);  // 5</code>
                 <p>
                     This behavior changes, when using the let declaration introduced in ECMAScript 2015.
                 </p>
-                <pre><code>
-if (true) {
-  let y = 5;
-}
-console.log(y);  
-// ReferenceError: y is not defined
-                </code></pre>
+                <code>if (true) {<br>  let y = 5;<br>}<br>console.log(y);<br>// ReferenceError: y is not defined</code>
             </section>
             <section class="main-section" id="global_variables">
                 <header>Global variables</header>
@@ -236,9 +210,7 @@ console.log(y);
                     and
                     can contain alphabetic, numeric, or underscore characters.
                 </p>
-                <pre><code>
-const PI = 3.14;
-                </code></pre>
+                <code>const PI = 3.14;</code>
                 <p>
                     A constant cannot change value through assignment or be re-declared while the script is running. It
                     has
@@ -253,25 +225,12 @@ const PI = 3.14;
                     You cannot declare a constant with the same name as a function or variable in the same scope. For
                     example:
                 </p>
-                <pre><code>
-// THIS WILL CAUSE AN ERROR
-function f() {};
-const f = 5;
-// THIS WILL CAUSE AN ERROR ALSO
-function f() {
-  const g = 5;
-  var g;
-  //statements
-}
-                </code></pre>
+                <code>// THIS WILL CAUSE AN ERROR<br>function f() {};<br>const f = 5;<br>// THIS WILL CAUSE AN ERROR ALSO<br>function f() {<br>  const g = 5;<br>  var g;<br>  //statements<br>}</code>
                 <p>
                     However, object attributes are not protected, so the following statement is executed without
                     problems.
                 </p>
-                <pre><code>
-const MY_OBJECT = {"key": "value"};
-MY_OBJECT.key = "otherValue";
-                </code></pre>
+                <code>const MY_OBJECT = {"key": "value"};<br>MY_OBJECT.key = "otherValue";</code>
             </section>
             <section class="main-section" id="data_types">
                 <header>Data types</header>
@@ -321,13 +280,7 @@ MY_OBJECT.key = "otherValue";
                     Use the if statement to execute a statement if a logical condition is true. Use the optional else
                     clause to execute a statement if the condition is false. An if statement looks as follows:
                 </p>
-                <pre><code>
-if (condition) {
-  statement_1;
-} else {
-  statement_2;
-}
-                </code></pre>
+                <code>if (condition) {<br>  statement_1;<br>} else {<br>  statement_2;<br>}</code>
                 <p>
                     condition can be any expression that evaluates to true or false. See Boolean for an explanation of
                     what
@@ -341,50 +294,24 @@ if (condition) {
                     as
                     follows:
                 </p>
-                <pre><code>
-if (condition_1) {
-  statement_1;
-} else if (condition_2) {
-  statement_2;
-} else if (condition_n) {
-  statement_n;
-} else {
-  statement_last;
-} 
-                </code></pre>
+                <code>if (condition_1) {<br>  statement_1;<br>} else if (condition_2) {<br>  statement_2;<br>} else if (condition_n) {<br>  statement_n;<br>} else {<br>  statement_last;<br>}</code>
                 <p>
                     In the case of multiple conditions only the first logical condition which evaluates to true will be
                     executed. To execute multiple statements, group them within a block statement ({ ... }) . In
                     general, it's good practice to always use block statements, especially when nesting if statements:
                 </p>
-                <pre><code>
-if (condition) {
-  statement_1_runs_if_condition_is_true;
-  statement_2_runs_if_condition_is_true;
-} else {
-  statement_3_runs_if_condition_is_false;
-  statement_4_runs_if_condition_is_false;
-}
-                </code></pre>
+                <code>if (condition) {<br>  statement_1_runs_if_condition_is_true;<br>  statement_2_runs_if_condition_is_true;<br>} else {<br>  statement_3_runs_if_condition_is_false;<br>  statement_4_runs_if_condition_is_false;<br>}</code>
                 <p>
                     It is advisable to not use simple assignments in a conditional expression, because the assignment
                     can be confused with equality when glancing over the code. For example, do not use the following
                     code:
                 </p>
-                <pre><code>
-if (x = y) {
-  /* statements here */
-}
-                </code></pre>
+                <code>if (x = y) {<br>  /* statements here */<br>}</code>
                 <p>
                     If you need to use an assignment in a conditional expression, a common practice is to put
                     additional parentheses around the assignment. For example:
                 </p>
-                <pre><code>
-if ((x = y)) {
-  /* statements here */
-}
-                </code></pre>
+                <code>if ((x = y)) {<br>  /* statements here */<br>}</code>
             </section>
             <section class="main-section" id="while_statement">
                 <header>while statement</header>
@@ -392,10 +319,7 @@ if ((x = y)) {
                     A while statement executes its statements as long as a specified condition evaluates to true. A
                     while statement looks as follows:
                 </p>
-                <pre><code>
-while (condition)
-  statement
-                </code></pre>
+                <code>while (condition)<br>statement</code>
                 <p>
                     If the condition becomes false, statement within the loop stops executing and control passes to the
                     statement following the loop.
@@ -414,14 +338,7 @@ while (condition)
                 <p>
                     The following while loop iterates as long as n is less than three:
                 </p>
-                <pre><code>
-var n = 0;
-var x = 0;
-while (n &lt; 3) {
-  n++;
-  x += n;
-}
-                </code></pre>
+                <code>var n = 0;<br>var x = 0;<br>while (n &lt; 3) {<br>  n++;<br>  x += n;<br>}</code>
                 <p>
                     With each iteration, the loop increments n and adds that value to x. Therefore, x and n take on the
                     following values:
@@ -461,19 +378,13 @@ while (n &lt; 3) {
                 <p>
                     For example, the following code defines a simple function named square:
                 </p>
-                <pre><code>
-function square(number) {
-    return number * number;
-}
-                </code></pre>
+                <code>function square(number) {<br>  return number * number;<br>}</code>
                 <p>
                     The function square takes one argument, called number. The function consists of one statement that
                     says to return the argument of the function (that is, number) multiplied by itself. The return
                     statement specifies the value returned by the function.
                 </p>
-                <pre><code>
-return number * number;
-                </code></pre>
+                <code>return number * number;</code>
                 <p>
                     Primitive parameters (such as a number) are passed to functions by value; the value is passed to
                     the
