--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <div id="container">
         <nav id="navbar">
             <header>JS Documentation</header>
-            <a href="#introduction">Introduction</a>
-            <a href="#what_you_should_already_know">What you should already know</a>
-            <a href="#java_script_and_java">JavaScript and Java</a>
-            <a href="#hello_world">Hello world</a>
-            <a href="#variables">Variables</a>
-            <a href="#declaring_variables">Declaring variables</a>
-            <a href="#variable_scope">Variable scope</a>
-            <a href="#global_variables">Global variables</a>
-            <a href="#constants">Constants</a>
-            <a href="#data_types">Data types</a>
-            <a href="#if_else_statement">if...else statement</a>
-            <a href="#while_statement">while statement</a>
-            <a href="#function_declarations">Function declarations</a>
-            <a href="#reference">Reference</a>
+            <a href="#introduction" class="nav-link">Introduction</a>
+            <a href="#what_you_should_already_know" class="nav-link">What you should already know</a>
+            <a href="#JAVASCRIPT_AND_JAVA" class="nav-link">JavaScript and Java</a>
+            <a href="#hello_world" class="nav-link">Hello world</a>
+            <a href="#variables" class="nav-link">Variables</a>
+            <a href="#declaring_variables" class="nav-link">Declaring variables</a>
+            <a href="#variable_scope" class="nav-link">Variable scope</a>
+            <a href="#global_variables" class="nav-link">Global variables</a>
+            <a href="#constants" class="nav-link">Constants</a>
+            <a href="#data_types" class="nav-link">Data types</a>
+            <a href="#IF...ELSE_STATEMENT" class="nav-link">if...else statement</a>
+            <a href="#while_statement" class="nav-link">while statement</a>
+            <a href="#function_declarations" class="nav-link">Function declarations</a>
+            <a href="#reference" class="nav-link">Reference</a>
         </nav>
         <main id="main-doc">
             <section class="main-section" id="introduction">
@@ -77,7 +77,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="main-section" id="java_script_and_java">
+            <section class="main-section" id="JAVASCRIPT_AND_JAVA">
                 <header>JavaScript and Java</header>
                 <p>
                     JavaScript and Java are similar in some ways but fundamentally different in some others. The
@@ -274,7 +274,7 @@
                     your application can perform.
                 </p>
             </section>
-            <section class="main-section" id="if_else_statement">
+            <section class="main-section" id="IF...ELSE_STATEMENT">
                 <header>if...else statement</header>
                 <p>
                     Use the if statement to execute a statement if a logical condition is true. Use the optional else
